fix skills spacings

--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -1,4 +1,4 @@
-$black : #0D0A0B;
+$black : #222;
 $red : #862121;
 $grey : #5f5f5f;
 $light : #f9f8f8;
