--- a/src/sass/base/_core.scss
+++ b/src/sass/base/_core.scss
@@ -7,3 +7,7 @@ body {
 section {
 	background-color: $light;
 }
+
+* {
+	box-sizing: border-box;
+}
